refactor: Swagger só com as rotas do serviço; rotas da plataforma ficam no Postman
